--- a/index.html
+++ b/index.html
@@ -1,53 +1,54 @@
 <!DOCTYPE html>
 <html lang="pl-PL">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Sit on</title>
-    <link rel="stylesheet" href="./css/style.css" />
+  <meta charset="UTF-8">
+  <title>Sit on</title>
+  <link rel="stylesheet" href="./css/style.css" />
 
 </head>
+
 <body>
-              <header>
-                  <div class="container">
-                    <div id="logo">SIT <span>ON </span>CHAIR</div>
-                      <nav>
-                        <ul>
-                          <li>O FIRMIE</li>
-                          <li>GALERIA</li>
-                          <li>KONTAKT</li>
-                        </ul>
-                      </nav>
-                  </div>
-            </header>
+  <header>
+    <div class="container">
+      <div id="logo">SIT <span>ON </span>CHAIR</div>
+      <nav>
+        <ul>
+          <li>O FIRMIE</li>
+          <li>GALERIA</li>
+          <li>KONTAKT</li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
 
   <section id="ch_and_t">
-           <div class="container">
+    <div class="container">
 
-                                        <div class="chair"></div>
+      <div class="chair"></div>
 
-                                      <div class="row_sit_on">
-                                          <h1>SIT <span>ON</span> OUR <span> CHAIR</span> </h1>
-                                      </div>
-                                      <div class="row_lorem">
-                                            <p>
-                                              orem Ipsum jest<br> tekstem stosowanym jako przykładowy wypełniacz w przemyśle poligraficznym.ierwszy użyty w XV w. przez nieznanego drukarza do
-                                              wprzemyśle elektronicznym, pozostając praktyczni
-                                            </p>
-                                      </div>
-                                      <div class="row_button">
-                                        <div class="button">
-                                            <p>ZOBACZ WIĘCEJ</p>
-                                        </div>
-                                        </div>
-                                        <div class="arrow">
-                                          <div class="arrow_left">
-                                          <span class="glyphicon glyphicon-chevron-left"> < </span>
-                                        </div>
-                                        <div class="arrow_right">
-                                          <span class="glyphicon glyphicon-chevron-right"> > </span>
-                                                      </div>
-                                          <!--
+      <div class="row_sit_on">
+        <h1>SIT <span>ON</span> OUR <span> CHAIR</span> </h1>
+      </div>
+      <div class="row_lorem">
+        <p>
+          Lorem Ipsum jest<br> tekstem stosowanym jako przykładowy wypełniacz w przemyśle poligraficznym.ierwszy użyty w XV w. przez nieznanego drukarza do wprzemyśle elektronicznym, pozostając praktyczni
+        </p>
+      </div>
+      <div class="row_button">
+        <div class="button">
+          <p>ZOBACZ WIĘCEJ</p>
+        </div>
+      </div>
+      <div class="arrow">
+        <div class="arrow_left">
+          <span class="glyphicon glyphicon-chevron-left"> < </span>
+        </div>
+        <div class="arrow_right">
+          <span class="glyphicon glyphicon-chevron-right"> > </span>
+        </div>
+        <!--
                                           <button type="button" class="btn btn-default">
       <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> poprzednie
   </button>
@@ -56,81 +57,197 @@
       <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span> następne
   </button>
 -->
-                                        </div>
+      </div>
 
-</div>
+    </div>
 
   </section>
 
-
+  <!--część ze zdjęciami-->
   <section id="photo">
-           <div class="container">
+    <div class="container">
 
-                 <div class="row">
-                      <div class="box-3a"><!-- zdjecie-->
-                      </div>
-                      <div class="box-3b"><!-- zdjecie-->
-                      </div>
-                      <div class="box-3c"><!-- tekst-->
-                      </div>
-                 </div>
+      <!--    <div class="row">   -->
+      <div class="box-3a">
+        <!-- zdjecie-->
+        <p class="p1-white">
+          <p class="p1-green">
+          </p>
+          <p id="clair">
+            Chair CLAIR
+          </p>
+        </p>
 
-           </div>
+      </div>
+      <div class="box-3b">
+        <!-- zdjecie-->
+        <p class="p2-white"></p>
+        <p class="p2-green"></p>
+        <p id="margarita">
+          Chair MARGARITA
+        </p>
+
+      </div>
+      <div class="box-3c">
+        <!-- tekst-->
+        <p id="h-nexttopicture">
+          Finds all inputs
+        </p>
+        <p class="p3-green">
+        </p>
+        <p id="txt1-nexttopicture">
+          Finds all inputs that are not chlickie no click events have been linked. Notice there is no change when clicking the checkboxes since no click events have been linked.
+        </p>
+        <p id="txt2-nexttopicture">
+          Finds all inputs that are not chlickie no click evFinds all inputs ie no click ev
+        </p>
+      </div>
+      <!--    </div>   -->
+
+    </div>
   </section>
 
   <section id="price_list">
-           <div class="container">
-             <div class="row">  <!-- rząd z nazwą cennik i prostokąt-->
-             </div>
+    <div class="containerpl">
 
-              <div class="row"> <!-- rząd z zawieszkami-->
-                   <div class="box-3a">
-                   </div>
-                   <div class="box-3b">
-                   </div>
-                   <div class="box-3c">
-                   </div>
+
+      <!-- rząd 2-->
+      <div class="row-price2">
+        <!-- rząd z nazwą CENNIK i prostokąt-->
+        <h5>CENNIK</h5>
+        <p class="long_p-green">
+        </p>
+      </div>
+<div class="three-rectan">
+      <!-- rząd z zawieszkami-->
+      <div class="box-price-a">
+
+          <div class="rectan">
+            <div class="circle-M">
+              <div class="circle-S"></div>
+            </div>
+            <h4>BasicPlan</h4>
+            <div class="circle-L">
+              <p class="price">85 99<br>PLN/MSC</p>
+              <div>
+                  <p class="p_in_label">Zakup towaru i dowów</p>
+                  <p class="p_in_label">serwis</p>
               </div>
+              <div class="button_join">DOŁĄCZ</div>
+            </div>
+          </div>
+
+      </div>
 
 
-           </div>
+      <div class="box-price-b">
+
+        <div class="rectan">
+          <div class="circle-M">
+            <div class="circle-S"></div>
+          </div>
+          <h4>BasicPlan</h4>
+          <div class="circle-L">
+            <p class="price">95 99<br>PLN/MSC</p>
+            <div>
+
+                <p class="p_in_label">Zakup towaru i dowów</p>
+                <p class="p_in_label">Serwis</p>
+                <p class="p_in_label">Gwarancja 6 lat</p>
+
+            </div>
+            <div class="button_join">DOŁĄCZ</div>
+          </div>
+        </div>
+
+      </div>
+      <div class="box-price-c">
+
+        <div class="rectan">
+          <div class="circle-M">
+            <div class="circle-S"></div>
+          </div>
+          <h4>BasicPlan</h4>
+          <div class="circle-L">
+            <p class="price">211 00<br>PLN/MSC</p>
+            <div>
+                <p class="p_in_label">Zakup towaru i dowów</p>
+                <p class="p_in_label">Serwis</p>
+                <p class="p_in_label">Gwarancja 6 lat</p>
+                <p class="p_in_label">Porady projektanta</p>
+            </div>
+            <div class="button_join">DOŁĄCZ</div>
+          </div>
+        </div>
+      </div>
+
+
+
+</div>
+</div>
   </section>
 
   <section id="form">
-           <div class="container">
-             <div class="row">  <!-- rząd z nazwą kontakt i prostokąt-->
-             </div>
+    <div class="container">
 
-              <div class="row"> <!-- formularz-->
-                   <div class="box-3a"> <!-- formularz-->
-                   </div>
-                   <div class="box-3b"> <!-- rys z przyciskiem-->
-                  </div>
-              </div>
+      <!-- rząd z nazwą kontakt i prostokąt-->
+      <h5>KONTAKT</h5>
+      <p class="long_p-green">
+      </p>
+      <!-- 3 pola formularza-->
+      <form>
+        <label for="imie"></label>
+        <p>
+          <input type="" placeholder="Imię">
+        </p>
+
+        <label for="mail"></label>
+        <p>
+          <input type="" placeholder="email">
+        </p>
+
+        <label for="message"></label>
+        <p>
+          <input type="" placeholder="Wiadomość">
+        </p>
+      </form>
+      <!-- rysunek krzesła i przycisk wyślij-->
+
+      <p id="red_chair"></p>
+      <form>
+        <p>
+          <label for="agree">Zgadzam się na przetwarzania danych osobowych:</label>
+          <input type="checkbox" value="Your e-mail" id="agree">
+        </p>
+
+        <p>
+          <input type="button-send" value="WYŚLIJ">
+        </p>
+
+      </form>
+
+
+
+
   </section>
 
-    <footer>
-          <div class="container">
-                <div class="black">
-                  <div class="xxxxxxxxxx">
+  <footer>
+    <div class="container">
+      <img src="../images/flickr.png" alt="flickr">
+      <img src="../images/vimeo.png" alt="vimeo">
+      <img src="../images/pinterest.png" alt="pinterest">
+      <img src="../images/twitter.png" alt="twitter">
+      </p>
 
-                    <div class="box-kontakt">
-                      <img src="images/logo.png" alt="LOGO">
-                    </div>
+      <p>Copyright 2014 | All Rights Reserved. - Sit On Chair </p>
 
-                      <div class="uuuuuuuuu">
+      <p>SIT ON CHAIR</p>
 
-                        <div class="box-25">
-                          <p>Production time<br>Questions and answers
-                          <br>Payments methods</p>
-                        </div>
 
-                      </div>
+    </div>
 
-                    </div>
-                  </div>
-          </div>
-    </footer>
+  </footer>
 
 </body>
+
 </html>
